Fix map widht on mobile

--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -1,10 +1,4 @@
 .map {
-
-    @media screen and (max-width: 1000px) {
-        width: 90%;
-        margin-top: 5vw;
-    }
-
     &__svg {
         background-color: rgb(248, 245, 245);
     }
